--- a/finalProjectAni/Base.lproj/Main.storyboard
+++ b/finalProjectAni/Base.lproj/Main.storyboard
@@ -113,7 +113,7 @@
                                     <constraint firstAttribute="height" constant="300" id="AXE-Sz-mFC"/>
                                 </constraints>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="166" id="djO-sK-3F6">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="TableViewCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="166" id="djO-sK-3F6" customClass="TableViewCell" customModule="finalProjectAni" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="44.5" width="414" height="166"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="djO-sK-3F6" id="lIm-Uc-BOF">
@@ -141,18 +141,6 @@
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" misplaced="YES" text="price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pQ8-qu-JLn">
                                                     <rect key="frame" x="161" y="91" width="43" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JtU-ih-Zsz">
-                                                    <rect key="frame" x="242" y="55" width="42" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fkp-ol-3jG">
-                                                    <rect key="frame" x="242" y="91" width="42" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -190,8 +178,6 @@
                                             <constraints>
                                                 <constraint firstItem="W4n-yp-Tjf" firstAttribute="height" secondItem="c0O-2u-2RB" secondAttribute="height" id="0Ez-fG-rkG"/>
                                                 <constraint firstItem="ypi-yz-hMD" firstAttribute="leading" secondItem="lIm-Uc-BOF" secondAttribute="leading" constant="10" id="1rc-hi-QdK"/>
-                                                <constraint firstAttribute="trailing" secondItem="fkp-ol-3jG" secondAttribute="trailing" constant="130" id="2Xg-Mq-8aQ"/>
-                                                <constraint firstItem="fkp-ol-3jG" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="JtU-ih-Zsz" secondAttribute="leading" id="2go-u6-rtw"/>
                                                 <constraint firstItem="olj-b4-Iyb" firstAttribute="width" secondItem="c0O-2u-2RB" secondAttribute="width" id="55m-E6-vqa"/>
                                                 <constraint firstItem="c0O-2u-2RB" firstAttribute="leading" secondItem="pQ8-qu-JLn" secondAttribute="trailing" constant="75" id="9OX-TU-fMf"/>
                                                 <constraint firstItem="pQ8-qu-JLn" firstAttribute="top" secondItem="t1G-1a-4gg" secondAttribute="bottom" constant="15" id="CO5-L1-f27"/>
@@ -210,17 +196,19 @@
                                                 <constraint firstItem="hia-ry-ayK" firstAttribute="top" secondItem="ypi-yz-hMD" secondAttribute="top" id="Xp4-6H-QQe"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="pQ8-qu-JLn" secondAttribute="bottom" constant="43" id="dCG-rI-BQQ"/>
                                                 <constraint firstAttribute="trailing" secondItem="W4n-yp-Tjf" secondAttribute="trailing" constant="10" id="duq-uQ-9cy"/>
-                                                <constraint firstItem="fkp-ol-3jG" firstAttribute="baseline" secondItem="pQ8-qu-JLn" secondAttribute="baseline" id="q3s-sY-C5a"/>
                                                 <constraint firstAttribute="trailing" secondItem="c0O-2u-2RB" secondAttribute="trailing" constant="103" id="rbH-Kb-ABe"/>
-                                                <constraint firstItem="fkp-ol-3jG" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="pQ8-qu-JLn" secondAttribute="trailing" constant="8" symbolic="YES" id="v9P-A3-apB"/>
                                                 <constraint firstItem="W4n-yp-Tjf" firstAttribute="bottom" secondItem="c0O-2u-2RB" secondAttribute="bottom" id="w07-3h-5mB"/>
-                                                <constraint firstAttribute="trailing" secondItem="JtU-ih-Zsz" secondAttribute="trailing" constant="130" id="wFM-PZ-bzn"/>
-                                                <constraint firstItem="fkp-ol-3jG" firstAttribute="top" secondItem="JtU-ih-Zsz" secondAttribute="bottom" constant="15" id="wd3-4t-1PU"/>
                                                 <constraint firstItem="olj-b4-Iyb" firstAttribute="top" secondItem="c0O-2u-2RB" secondAttribute="top" id="wx7-g9-33m"/>
                                                 <constraint firstItem="W4n-yp-Tjf" firstAttribute="leading" secondItem="olj-b4-Iyb" secondAttribute="trailing" id="zEV-I8-F5A"/>
                                                 <constraint firstItem="W4n-yp-Tjf" firstAttribute="top" secondItem="c0O-2u-2RB" secondAttribute="top" id="znV-Vf-ay7"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="image" destination="ypi-yz-hMD" id="TcE-Vm-3RE"/>
+                                            <outlet property="priceLabel" destination="pQ8-qu-JLn" id="n8R-fm-c8e"/>
+                                            <outlet property="productsLabel" destination="hia-ry-ayK" id="IKt-Ym-m9j"/>
+                                            <outlet property="stockLabel" destination="t1G-1a-4gg" id="jhu-Hd-mqP"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
